feat: Implementar sistema de bodegas y compras mÃºltiples con lotes
- Agregar modelo y migraciÃ³n para Warehouse/Bodega
- Agregar campo warehouse_id a productos
- Crear controlador y rutas API para bodegas
- Actualizar AddProductForm y EditProductForm para incluir selecciÃ³n de bodega
- Crear componente MultiProductPurchaseForm para compras con mÃºltiples productos
- Actualizar InventoryView para mostrar bodega y botÃ³n de compra mÃºltiple
- Actualizar backend ProductController para incluir relaciÃ³n warehouse
- Integrar carga de bodegas en App.js
- Corregir error de Log en CashDrawerController (usar Log en lugar de \Log)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "QAntico POS",
+  "name": "QAntico POS - Sistema de Punto de Venta",
   "icons": [
     {
       "src": "favicon.ico",
