--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "facil",
+  "name": "qantico-pos",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@remix-run/router": "^1.23.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.13.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.4.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,7 +42,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.3"
+    "postcss": "^8.5.3"
   }
 }
